--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name" : "CareForChildren",
-    "appid" : "__UNI__D1F40BF",
+    "name" : "left_behind _children",
+    "appid" : "__UNI__D402E81",
     "description" : "",
     "versionName" : "1.0.0",
     "versionCode" : "100",
@@ -50,11 +50,10 @@
     /* 快应用特有相关 */
     "mp-weixin" : {
         /* 小程序特有相关 */
-        "appid" : "",
+        "appid" : "wx51d5eeba73d732de",
         "setting" : {
             "urlCheck" : false
         },
         "usingComponents" : true
-    },
-    "vueVersion" : "2"
+    }
 }
