--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
     "name" : "left_behind _children",
-    "appid" : "__UNI__D9F4F17",
+    "appid" : "__UNI__BE71216",
     "description" : "",
     "versionName" : "1.0.0",
     "versionCode" : "100",
@@ -50,7 +50,7 @@
     /* 快应用特有相关 */
     "mp-weixin" : {
         /* 小程序特有相关 */
-        "appid" : "wxfda8057f2b7cb400",
+        "appid" : "wx51d5eeba73d732de",
         "setting" : {
             "urlCheck" : false
         },
