--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
     "name" : "护苗",
-    "appid" : "__UNI__670C782",
+    "appid" : "__UNI__D9F4F17",
     "description" : "",
     "versionName" : "1.0.0",
     "versionCode" : "100",
