--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,9 @@
 {
     "name" : "护苗",
     "appid" : "__UNI__670C782",
-    "description" : "",
-    "versionName" : "1.0.0",
-    "versionCode" : "100",
+    "description" : "丢失的大熊猫队华北五省项目护苗app",
+    "versionName" : "1.0.3",
+    "versionCode" : 103,
     "transformPx" : false,
     "app-plus" : {
         /* 5+App特有相关 */
@@ -96,5 +96,6 @@
             "es6" : false
         },
         "usingComponents" : true
-    }
+    },
+    "locale" : "zh-Hans"
 }
