--- a/manifest.json
+++ b/manifest.json
@@ -12,7 +12,7 @@
         "nvueStyleCompiler" : "uni-app",
         "splashscreen" : {
             "alwaysShowBeforeRender" : true,
-            "waiting" : true,
+            "waiting" : false,
             "autoclose" : true,
             "delay" : 0
         },
@@ -107,9 +107,9 @@
             "splashscreen" : {
                 "androidStyle" : "default",
                 "android" : {
-                    "hdpi" : "static/startPage.png",
-                    "xhdpi" : "static/startPage.png",
-                    "xxhdpi" : "static/startPage.png"
+                    "hdpi" : "static/start.png",
+                    "xhdpi" : "static/start.png",
+                    "xxhdpi" : "static/start.png"
                 },
                 "useOriginalMsgbox" : true
             }
