--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
     "name" : "护苗",
-    "appid" : "__UNI__670C782",
+    "appid" : "__UNI__3B77CD6",
     "description" : "丢失的大熊猫队华北五省项目护苗app",
     "versionName" : "1.1.0",
     "versionCode" : 109,
