--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,9 @@
 {
     "name" : "护苗",
-    "appid" : "__UNI__3B77CD6",
+    "appid" : "__UNI__670C782",
     "description" : "丢失的大熊猫队华北五省项目护苗app",
-    "versionName" : "1.1.0",
-    "versionCode" : 109,
+    "versionName" : "1.2.0",
+    "versionCode" : 120,
     "transformPx" : false,
     "app-plus" : {
         /* 5+App特有相关 */
